[package]
name = "ci-tool"
version = "0.1.0"
authors = ["Maxime BAILLY <maxbailly@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^2", features = ["yaml"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1.0"

jenkins_ci = { path = "../jenkins_ci"}
